--- a/package.json
+++ b/package.json
@@ -17,5 +17,12 @@
   "devDependencies": {},
   "bundleDependencies": [],
   "private": true,
-  "main": "server.js"
+  "main": "server.js",
+  "dependencies": {
+    "mongoose": "~3.8.21",
+    "express": "~4.11.1",
+    "http": "0.0.0",
+    "cors": "~2.5.3",
+    "body-parser": "~1.10.2"
+  }
 }
