--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "~4.11.1",
     "http": "0.0.0",
     "cors": "~2.5.3",
-    "body-parser": "~1.10.2"
+    "body-parser": "~1.10.2",
+    "morgan": "~1.5.1"
   }
 }
