--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "cors": "~2.5.3",
     "body-parser": "~1.10.2",
     "morgan": "~1.5.1",
-    "moment": "~2.9.0"
+    "moment": "~2.9.0",
+    "q": "~1.1.2"
   }
 }
